# Regression

./: .gitignore
View_Plot/src/: CMakeLists.txt  ChartDirector.cpp  ChartDirector.h  DataImporter.cpp  DataImporter.h  LinearRegression.cpp  LinearRegression.h  QViewChart.cpp  QViewChart.h  UnitTesting.cpp  UnitTesting.h  main.cpp
regression/data/: buch.txt  lambda.txt  lambda_bignumber.txt  resultComparing.txt  test.txt
regression/libs/ChartDirector/include/: bchartdir.h
regression/libs/ChartDirector/lib/: chartdir50.lib
regression/src/: CMakeLists.txt  ChartDirector.cpp  ChartDirector.h  ControlView.ui  Controller.cpp  Controller.h  CramerRule.cpp  CramerRule.h  DataGenerator.cpp  DataGenerator.h  DataImporter.cpp  DataImporter.h  Dll.h  GaussElimination.cpp  GaussElimination.h  LinearEquation.cpp  LinearEquation.h  LinearRegression.cpp  LinearRegression.h  QControlView.cpp  QControlView.h  QViewChart.cpp  QViewChart.h  Regularization.cpp  Regularization.h  UnitTesting.cpp  UnitTesting.h  bigfloat.cpp  bigfloat.h  global.h  main.cpp  ui_ControlView.h
